[tool.poetry]
name = "pre-commit-matlab"
version = "1.2.0"
description = "A Collection of pre-commit hooks for MATLAB"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pre-commit-matlab"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
packages = [{include = "pre_commit_matlab"},]

[tool.poetry.scripts]
matlab-reflow-comments = "pre_commit_matlab.matlab_reflow_comments:main"
invoke-mlint = "pre_commit_matlab.invoke_mlint:main"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^24.3"
bump2version = "^1.0"
flake8 = "^7.0"
flake8-annotations = "^3.0"
isort = "^5.12"
mypy = "^1.10"
pre-commit = "^3.0"
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-randomly = "^3.12"
ruff = "^0.5"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pre-commit-matlab,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
